<resources>
    <string name="app_name">Escola em Casa DF</string>
    <!-- <string name="about">O aplicativo Escola em Casa DF tem como objetivo liberar o acesso de forma
    gratuita à plataforma utilizada para o ensino público à distância no Distrito Federal, o Google
    Classroom. Permite também, gratuitamente, o uso do site Wikipedia como forma de auxiliar o
    ensino remoto.\n\n Os dados móveis, internet móvel, utilizados no aplicativo serão custeados
    pelo próprio GDF, não sendo utilizados os dados do plano pessoal dos alunos e/ou professores da
    Secretaria de Educação do Distrito Federal.</string> -->
    <string name="about">
    O aplicativo Escola em Casa DF tem como objetivo ser uma alternativa a mais de acesso à
    plataforma adotada para o ensino público à distância do Governo do Distrito Federal, o Google
    Classroom.
    </string>
    <string name="item_about">Sobre</string>
    <string name="item_questions">Dúvidas Frequentes</string>
    <string name="item_gcr">Google Classroom</string>
    <string name="item_wikipedia">Wikipedia</string>
    <string name="links_importantes">Links Importantes</string>
    <string name="como_acessar"> Problemas para acessar o Google Sala de Aula? </string>
    <string name="https_escolaemcasa_se_df_gov_br"><u>Escola em Casa DF (site)</u></string>
    <string name="https_escolaemcasa_se_df_gov_br_index_php_como_acessar"><u>Como acessar o Google Sala de Aula</u></string>
    <string name="http_www_se_df_gov_br"><u>Secretaria da Educação (site)</u></string>
    <string name="tutorial"> Dificuldades para usar o aplicativo? </string>
    <string name="tutorial_btn"> Tutorial interativo </string>
    <string name="js_email_checker">
    javascript:(function f(e) {
        var email = document.getElementsByName(\'identifier\');

        email[0].oninput = function(value) {
          if(!/^\\w?([\\.-]?\\w+)*(@)?((e(d(u)?)?)?|(e(s(t(u(d(a(n(t(e)?)?)?)?)?)?)?)?)?)?(\\.)?(s(e(\\.(d(f(\\.(g(o(v(\\.(b(r)?)?)?)?)?)?)?)?)?)?)?)?$/.test(email[0].value)){
            email[0].value = email[0].value.split(\'@\')[0];
            alert(\'São permitidos apenas emails com domínio: @edu.se.df.gov.br ou @estudante.se.df.gov.br ou @se.df.gov.br\');
            return false;
          }
        }
    })()
    </string>
    <string name="js_email_information">
    javascript:(function f() {
        document.getElementsByClassName(\'OIPlvf\')[0].style.display=\'none\';

        document.getElementsByClassName(\'Y4dIwd\')[0].innerHTML = \'Use sua conta Google Sala De Aula (@edu.se.df.gov.br ou @estudante.se.df.gov.br ou @se.df.gov.br)\'
    })()
    </string>
    <string name="js_hide_driver">
    javascript:(function f() {
        document.getElementsByClassName(\'docs-ml-header-item docs-ml-header-drive-link\')[0].style.display=\'none\';
    })()
    </string>
    <string name="js_hide_donation">
    javascript:(function f() {
        document.getElementById(\'p-donation\').style.display=\'none\';
    })()
    </string>
</resources>