<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:context=".AboutActivity">

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:tint="@color/royalBlue"
            app:srcCompat="@drawable/ic_main_logo" />

        <LinearLayout
            android:id="@+id/otherLogos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mainLogo">

            <ImageView
                android:layout_width="79dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:alpha="0"
                app:srcCompat="@drawable/ic_gdf_logo" />

            <ImageView
                android:layout_width="69dp"
                android:layout_height="106dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingLeft="15dp"
                android:paddingTop="40dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:tint="@color/royalBlue"
                app:srcCompat="@drawable/ic_unb_logo" />

            <ImageView
                android:layout_width="51dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:tint="@color/royalBlue"
                app:srcCompat="@drawable/ic_gdf_logo" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:alpha="0"
                app:srcCompat="@drawable/ic_unb_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otherLogos"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"

            android:text="@string/links_importantes"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/link1"
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="myOnClick"
            android:text="@string/https_escolaemcasa_se_df_gov_br"
            android:textAlignment="center"
            android:textColor="@color/royalBlue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/link2"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link1"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="myOnClick"
            android:text="@string/https_escolaemcasa_se_df_gov_br_index_php_como_acessar"
            android:textAlignment="center"
            android:textColor="@color/royalBlue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/link3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/link2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="myOnClick"
            android:text="@string/http_www_se_df_gov_br"
            android:textAlignment="center"
            android:textColor="@color/royalBlue"
            android:textSize="18sp" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            app:itemIconSize="20dp"
            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            app:labelVisibilityMode="labeled"
            app:menu="@menu/main_menu" />

    </RelativeLayout>

</ScrollView>